feat: changing queue + preference req dto